# USCP

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  README.md
code/: CMakeLists.txt
code/cmake/: cxxopts.cmake  dynamic_bitset.cmake  inja.cmake  json.cmake  spdlog.cmake
code/common/: CMakeLists.txt
code/common/include/common/algorithms/: greedy.hpp  memetic.hpp  rwls.hpp
code/common/include/common/data/: instance.hpp  instances.hpp  solution.hpp
code/common/include/common/data/instances/: gvcp.hpp  sts.hpp
code/common/include/common/data/instances/orlibrary/: orlibrary.hpp  rail.hpp
code/common/include/common/utils/: format.hpp  logger.hpp  ostream_config_guard.hpp  random.hpp  timer.hpp  utils.hpp
code/common/src/algorithms/: greedy.cpp  memetic.cpp  rwls.cpp
code/common/src/data/: instance.cpp  solution.cpp
code/common/src/data/instances/: gvcp.cpp  sts.cpp
code/common/src/data/instances/orlibrary/: orlibrary.cpp  rail.cpp
code/common/src/utils/: logger.cpp  timer.cpp
code/printer/: CMakeLists.txt
code/printer/include/printer/: data.hpp  printer.hpp
code/printer/src/: data.cpp  main.cpp  printer.cpp
code/resources/OR-Library/: download.sh
code/resources/reductions/: RAIL507.json  RAIL516.json  RAIL582.json
code/resources/steiner-triple-covering/: download.sh  download2.sh
code/resources/templates/: .latexmkrc  main.tex
code/resources/templates/plots/: weights.tex  weights_import.tex
code/resources/templates/tables/: instances.tex  results.tex  rwls_stats.tex  sts_instances.tex
code/resources/templates/tables/memetic_comparisons/: comparison.tex
code/solver/: CMakeLists.txt
code/solver/include/algorithms/: exhaustive.hpp  greedy.hpp  rwls.hpp
code/solver/include/data/: instance.hpp  instances.hpp  orlibrary.hpp  solution.hpp  sts.hpp
code/solver/include/data/instances/: sts.hpp
code/solver/include/data/instances/orlibrary/: orlibrary.hpp  rail.hpp
code/solver/include/solver/algorithms/: exhaustive.hpp  greedy.hpp  memetic.hpp  memetic.tpp  random.hpp  rwls.hpp
code/solver/include/solver/algorithms/crossovers/: extended_subproblem_greedy.hpp  extended_subproblem_random.hpp  extended_subproblem_rwls.hpp  greedy_merge.hpp  identity.hpp  merge.hpp  random_subproblem.hpp  subproblem_greedy.hpp  subproblem_random.hpp  subproblem_rwls.hpp
code/solver/include/solver/algorithms/wcrossover/: add.hpp  average.hpp  difference.hpp  keep.hpp  max.hpp  min.hpp  minmax.hpp  mix_random.hpp  reset.hpp  shuffle.hpp
code/solver/include/solver/data/: instance.hpp  instances.hpp  solution.hpp
code/solver/include/solver/utils/: permutations.hpp  printer.hpp
code/solver/include/utils/: logger.hpp  permutations.hpp  printer.hpp
code/solver/src/: main.cpp
code/solver/src/algorithms/: exhaustive.cpp  greedy.cpp  memetic.cpp  random.cpp  rwls.cpp
code/solver/src/data/: instance.cpp  instances.cpp  orlibrary.cpp  solution.cpp  sts.cpp
code/solver/src/data/instances/: sts.cpp
code/solver/src/data/instances/orlibrary/: orlibrary.cpp  rail.cpp
code/solver/src/utils/: logger.cpp  permutations.cpp  printer.cpp  timer.cpp
documents/instances/: main.tex
documents/instances/tables/: orlibrary_instances_base.tex  orlibrary_instances_cyc_clr.tex  orlibrary_instances_rail.tex
